// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options: advanced 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
    <title>advanced options</title>
    <meta name=\\"description\\" content=\\"mini-html-webpack-template\\">
    <meta property=\\"og:description\\" content=\\"mini-html-webpack-template\\">
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"/favicon.ico\\">
    <script defer=\\"\\" type=\\"text/javascript\\" src=\\"https://unpkg.com/random\\"></script>
    <style id=\\"head-raw-string\\"></style>
    <link rel=\\"stylesheet\\" href=\\"main.css\\">
  </head>
  <body>
    <script id=\\"body-raw-array-1\\"></script>
    <script id=\\"body-raw-array-2\\"></script>
    <script src=\\"main.js\\"></script>
  </body>
</html>"
`;

exports[`options: common 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
    <title>common options</title>
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"/favicon.ico\\">
    <link rel=\\"stylesheet\\" href=\\"main.css\\">
  </head>
  <body>
    <div id=\\"root\\"></div>
    <script src=\\"main.js\\"></script>
  </body>
</html>"
`;

exports[`options: output attrs 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
    <title>output attrs</title>
    <link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"/favicon.ico\\">
    <link type=\\"text/css\\" rel=\\"stylesheet\\" href=\\"main.css\\">
  </head>
  <body>
    <div id=\\"root\\"></div>
    <script async=\\"\\" type=\\"text/javascript\\" src=\\"main.js\\"></script>
  </body>
</html>"
`;

exports[`options: trim whitespace 1`] = `"<!DOCTYPE html><html><head><meta charset=\\"utf-8\\"><meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\"><meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\"><title>trim whitespace</title><link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"/favicon.ico\\"><link rel=\\"stylesheet\\" href=\\"main.css\\"></head><body><div id=\\"root\\"></div><script src=\\"main.js\\"></script></body></html>"`;
